@@ -469,7 +469,8 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
                             sub_mat = local_chunk[peak - snippet_duration:peak + snippet_duration + 1, elec]
 
                             if reject_noise:
-                                is_noise = numpy.std(sub_mat[snippet_duration - noise_window: snippet_duration + noise_window])/stds[elec] < rejection_threshold
+                                slice_window = sub_mat[snippet_duration - noise_window: snippet_duration + noise_window]
+                                is_noise = numpy.mean(slice_window**2)/stds[elec] < rejection_threshold
                             else:
                                 is_noise = False
                             
